Fix overflow of filter steps list in small windows
(or long lists…)

--- a/static/filter-editor.css
+++ b/static/filter-editor.css
@@ -122,6 +122,7 @@ body {
 	flex-direction: column;
 	flex: 0 0 300px;
 	border-left: 1px solid #ccc;
+	overflow: auto;
 }
 
 .available-filters {
@@ -129,7 +130,7 @@ body {
 }
 
 .filter-steps {
-	flex: 1;
+	flex: 1 0 auto;
 	border-top: 1px solid #ccc;
 	overflow-y: auto;
 }
